# people-search

backend/: .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/tests/: conftest.py  test_api.py
frontend/: bun.lockb  openapi-ts.config.ts  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/client/: schemas.gen.ts  services.gen.ts  types.gen.ts
frontend/src/client/@tanstack/: react-query.gen.ts
frontend/src/components/: ResultsList.tsx  SearchDialog.tsx
