[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.114.0",
    "openai>=1.47.0",
    "psycopg2-binary>=2.9.9",
    "sqlmodel>=0.0.22",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]

[tool.pytest]
pythonpath = ["."]